examples/semantic_errors/errors2.clash
// 1) Parâmetro duplicado na assinatura da função
func f(a: int, a: int): int {
    return "nao eh int"; // retorno com tipo errado (espera int)
}

// 2) Continue fora de loop
continue;

// 3) Atribuição de struct-literal para um tipo não-struct
var p: int = new { nome: "Ana" };

// 4) Lista com elementos de tipos mistos
var nums: list[int] = [1, "dois", 3];

// 5) Chamada de função com número errado de argumentos
func soma(a: int, b: int): int {
    return a + b;
}

var r: int = soma(1); // faltando argumento
